// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should pass the actions to the consumer 1`] = `
<Provider>
  <Consumer>
    <span>
      world
    </span>
    <button
      onClick={[Function]}
    />
  </Consumer>
</Provider>
`;

exports[`should pass the actions to the consumer 2`] = `
<Provider>
  <Consumer>
    <span>
      world!
    </span>
    <button
      onClick={[Function]}
    />
  </Consumer>
</Provider>
`;

exports[`should pass the state to a stateful component using a hoc 1`] = `
<Provider>
  <WithConsumer
    test="prop"
  >
    <Consumer>
      <Component
        append={[Function]}
        hello="world!"
        test="prop"
      >
        <span>
          prop
        </span>
        <span>
          world!
        </span>
      </Component>
    </Consumer>
  </WithConsumer>
</Provider>
`;

exports[`should pass the state to a stateless component using a hoc 1`] = `
<Provider>
  <WithConsumer
    test="prop"
  >
    <Consumer>
      <Component
        append={[Function]}
        hello="world"
        test="prop"
      >
        <span>
          prop
        </span>
        <span>
          world
        </span>
        <button
          onClick={[Function]}
        />
      </Component>
    </Consumer>
  </WithConsumer>
</Provider>
`;

exports[`should return the updated state 1`] = `
Object {
  "hello": "world!",
  "test": 0,
}
`;

exports[`should return the updated state 2`] = `
Object {
  "hello": "world!",
  "test": 1,
}
`;

exports[`should update the store 1`] = `
<Provider>
  <Consumer>
    world
  </Consumer>
</Provider>
`;

exports[`should update the store 2`] = `
<Provider>
  <Consumer>
    world!
  </Consumer>
</Provider>
`;

exports[`should update the store as event handler 1`] = `
<Provider>
  <Consumer>
    <span>
      world
    </span>
    <button
      onClick={[Function]}
    />
  </Consumer>
</Provider>
`;

exports[`should update the store as event handler 2`] = `
<Provider>
  <Consumer>
    <span>
      world!
    </span>
    <button
      onClick={[Function]}
    />
  </Consumer>
</Provider>
`;

exports[`should update the store asynchronously 1`] = `
<Provider>
  <Consumer>
    0
  </Consumer>
</Provider>
`;

exports[`should update the store asynchronously 2`] = `
<Provider>
  <Consumer>
    1
  </Consumer>
</Provider>
`;
